# crawler-datajud

./: .env.api_key  .gitignore  README.md  pyproject.toml
crawler_datajud/: atributos.py  cli.py  endpoints.py  main.py
